[package]
name = "learn-gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.6.0"
image = "0.24.3"
nalgebra-glm = "0.18.0"
glutin = "0.30.6"
winit = "0.28.1"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.0"
egui-winit = "0.21.1"
egui_glow = { version = "0.21.0", features = ["winit"]}
glow = "*"
egui = "*"

