[package]
name = "ch2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
glutin = "0.30.6"
nalgebra-glm = "0.18.0"
winit = "0.28.2"
gl = "0.6.0"
wrapper = { path = "../wrapper/" }
window-creator = { path = "../window-creator/", features = ["egui-init"] }
