[package]
name = "window-creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.30.6"
glutin-winit = "0.3.0"
winit = "0.28.2"
raw-window-handle = "0.5.1"
egui = { version = "0.21.0", optional = true }
egui-winit = { version = "0.21.1", optional = true }
egui_glow = { version = "0.21.0", features = [ "winit" ], optional = true }
glow = { version = "0.12.1", optional = true }

[features]
egui-init = ["dep:egui", "dep:egui-winit", "dep:egui_glow", "dep:glow"]
